--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ baseurl: ""
 title: davenewza
 
 # Short description of your site
-description: A virtual proof that name is awesome!
+description: Code ramblings by Dave New
 
 # --- Navigation bar options --- #
 
