--- a/_config.yml
+++ b/_config.yml
@@ -77,14 +77,14 @@ share-links-active:
 
 # How to display the link to the website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "davenewza.github.io"  # eg. "deanattali.com/beautiful-jekyll"
+url-pretty: "http://davenewza.com" 
 
 # --- Misc --- #
 # Fill in your Disqus shortname (NOT the userid) if you want to support Disqus comments
 disqus: "davenewza"
 
 # Fill in your Google Analytics ID to track your website using GA
-#google_analytics: ""
+google_analytics: "UA-101679610-1"
 
 # Google Tag Manager ID
 #gtm: ""
