--- a/_config.yml
+++ b/_config.yml
@@ -23,6 +23,7 @@ description: Code ramblings by Dave New
 
 # List of links in the navigation bar
 navbar-links:
+  Blog: "home"
   About Me: "aboutme"
 #  Resources:
 #    - Beautiful Jekyll: "http://deanattali.com/beautiful-jekyll/"
